--- a/index.html
+++ b/index.html
@@ -76,12 +76,26 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Library.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Library.png" alt="" /></a>
 										<header>
 											<h3>Library Management system </h3>
 										</header>
 									</article>
 								</div>
+							</div>
+							<div class="4u 12u$(mobile)">
+								<article class="item">
+									<a href="#" class="image fit"><img src="images/ecommerce.png" alt="" /></a>
+									<header>
+										<h3>Ecommerce App</h3>
+									</header>
+								</article>
+								<article class="item">
+									<a href="#" class="image fit"><img src="images/Log.png" alt="" /></a>
+									<header>
+										<h3>KLAS Dashboard </h3>
+									</header>
+								</article>
 							</div>
 
 						</div>
