Changes in layout of portfolio

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							
 							<div class="4u 12u$(mobile)">
 								<article class="item">
-									<a href="#" class="image fit"><img src="images/ecommerce.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Ecommerce.png" alt="" /></a>
 									<header>
 										<h3>Ecommerce App</h3>
 									</header>
