Changes in layout of portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div id="header">
 
 				<div class="top">
-						<div id="logo">
+						<div>
 							<span class="image avatar48"><img src="images/myimage.jpg" alt="" /></span>
 							<h1 id="title">Chandrashekar </h1>
 							<p>Fullstack Developer </p>
@@ -19,8 +19,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">About Me</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Resume</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Resume</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
