--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Jess Tan - Front-End Engineer</title>
+        <title>Chandrashekar S:Fullstack developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/animate.css" rel="stylesheet">
