--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <h2>Chandrashekar S</h2>
                         <br>
                         <p>
-                            I aspire to work in the field of Data-Analytics and full-stack development. 
+                            I aspire to work in the field of Data-Analytics and full-stack development.
                             I Currently working as an intern at <b>Bluejeans Networks</b> on <b>Fullstack development.  </b>
                             Completed my M.Tech in Web-Technologies at PESIT,I worked as Intern at <b>Wikiresults</b> on <b>Data-Analytics and Web development</b><br>
                             <br>
@@ -237,6 +237,14 @@
 
         <script>
           new WOW().init();
+        </script>
+        <script type="text/javascript">
+            window.smartlook||(function(d) {
+            var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+            var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+            c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+            })(document);
+            smartlook('init', '7140ad0ebd15a642cd3ef7421412635c5ba4fe69');
         </script>
     </body>
 
